--- a/ModernKebraNegast.scriv/Settings/ui.plist
+++ b/ModernKebraNegast.scriv/Settings/ui.plist
@@ -16,6 +16,51 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>2F9631B4-FE5F-45C7-8080-1FB532691C1B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>2FA11E4C-7FA3-4BD6-84C6-0EAAC8CA76E5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>5E8458F1-D48C-4395-957E-834F9C10E632</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>78E66A75-50C3-4433-B300-12FBBD573D34</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>8A5DA0BD-2716-4DA5-82B4-A9C28DA330FC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9D179D69-5752-48CF-83C9-FA9F65B2AC14</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>A0401633-D8B7-4F1E-9BF6-98552D80F495</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>C8A8AF88-C980-48B7-852A-D41041EF5A0C</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>FA9A9D13-DDC8-445B-9644-80DE3DBD6196</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 	</dict>
 	<key>collectionsRepresentedBinderDocumentsInfo</key>
 	<dict>
@@ -46,7 +91,7 @@
 		<real>1</real>
 	</dict>
 	<key>mainWindowFrame</key>
-	<string>0 620 1151 1047 0 0 3008 1667 </string>
+	<string>434 620 1151 1047 0 0 3008 1667 </string>
 	<key>supportingDocumentEditor.dockedQRTextSettings</key>
 	<dict>
 		<key>textScaleFactor</key>
