--- a/ModernKebraNegast.scriv/Settings/ui.plist
+++ b/ModernKebraNegast.scriv/Settings/ui.plist
@@ -16,6 +16,161 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>028DF88E-85B8-4DCD-8ACF-051D209F2A26</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>02B79A53-0791-4ADE-9304-F365C506B0E9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>08C6254A-532A-48C1-A5F1-0D9A45B38A9A</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>0B5DE028-7B13-4B9F-B9C3-86E0E3DFE2A0</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>0CE2C16B-36E1-43CB-9D05-35D9E0EE9900</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>0D3E45C2-D5C1-4FF5-B3DE-6EDC1CECE87A</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>0EEF3E7B-FF29-43FD-B7AA-C20BC20BF9C9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>11055E8F-D544-43CA-AC3A-4CA9B05AAB13</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>126F4A09-B39F-46F1-BF75-F7AD64477AD9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>12C08EBC-64CB-43A6-83BE-51B9333D9D7D</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>157EE0CB-CF64-4253-A465-5A5C42A88062</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>16C192A4-F1CD-4F1C-B57B-A4D39E89CFB9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>181B20C3-5386-4B28-AA11-2FEF0F136718</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>18374A47-A9CA-4DC8-86F3-4B6C8128E847</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>196B8786-65C5-4128-8513-518947B9F72A</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>1AE40D3D-29EB-4771-A82A-2B105356C9F5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>1DAF1CA0-B5E3-41E8-A8ED-786893ABF2D0</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>1E1D93E3-EF42-4DC3-BDBA-205CE4F55537</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>1F325C99-C715-4673-BC0D-7177E2F66E7B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>1F4CBEA8-B9D6-4167-8721-BFA66D16BD93</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>1FC93385-D2C8-4714-8A4A-CCBB7BF7E1FA</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>2055648A-2AD7-415B-84C2-C811D0BAA23B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>23AC152F-1C90-499D-8EF1-B3947C3C0800</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>23B492B2-9E72-4813-BB7F-BE1097C54EA2</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>24F48E13-F1A1-4798-9D14-57783B482668</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>25489320-1838-4FDC-B72C-048BDAD26743</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>27A8BBED-EC24-4951-A8A3-C9EF92C18A94</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>2A29C901-E3DB-422E-8D29-FA35BA820E58</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>2B23C3F0-3859-4602-8A55-78A17B6DFA15</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>2C013A42-961C-4ED9-A73B-96094D65E3F6</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>2D874845-5CD7-4A9B-879F-5886DECA610B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>2F9631B4-FE5F-45C7-8080-1FB532691C1B</key>
 		<dict>
 			<key>Row</key>
@@ -26,7 +181,172 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>304C1D6D-1335-44AD-8457-3D1594AFBFD5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>36C2606A-29A1-4B12-B759-FE663F30E5F5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>37997AC6-B5F2-42FE-90E5-B2824DAC4548</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>39484EAC-FA98-424D-808D-CB91BCE7F548</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>39633BF5-EF0B-47FA-82AB-04D7ADFCDCE3</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>3A6F1EBE-A2DF-4A3A-8B7B-0EFFBA910C27</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>3DE2E8D9-52F8-4E1C-AF87-857E0294704F</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>3F756F41-FEF7-4696-B294-668B5E1DACE6</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>41EF8396-70EC-4250-AD3E-EEFB0F256E8C</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>44614034-CEEC-465B-8B5C-5A207BFBA9BC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>46378D25-95C8-4EEE-9914-06CB2CE2A9F9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>4668474F-A890-4257-AF44-5DE3156D72E1</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>4839FBDE-3671-4584-B9FA-BAFE16A76EE3</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>50A8CD2C-C07E-400C-AB53-650E214D93AE</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>5138F00F-EE8E-4764-983F-149431F0EFA2</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>536F384E-3EA4-4475-844F-23E724385FBE</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>566C7C04-E8FD-4547-A9D7-2B1F035B4626</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>57A567B3-1090-4F20-AA7E-2ACEFFCF30BC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>5807A234-F6E9-4076-9AAA-73D73338E84C</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>5E8458F1-D48C-4395-957E-834F9C10E632</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>5FC7E462-D59F-4880-A8C0-D3C40272E95B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>601BA5F9-C19C-4168-A52C-56D98E8322CC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>60EEE6BA-0354-47F6-AE21-A6C88286A2B2</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>651F63C0-AA9F-4B66-BF85-9F60BC093BC4</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>6C41C273-CB10-4092-A60A-FB6F543C6E2A</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>6C4D5CC7-6D50-42D9-A080-4158B5CC7321</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>6D1C3E7B-C347-477A-BBA7-A9384C982DC5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>6E76A05B-38E0-471D-B980-F0A78873027B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>6F2F2048-A29E-41DB-AC74-34D264C10934</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>7023C105-5178-4D1B-ABE2-D58934891842</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>73A4D825-6A00-4241-96DC-3B5129D9B9FD</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>74016A29-C426-4468-9D0B-357149297C95</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>76B56A4A-DFE2-45A1-95FB-C0E63307D618</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>78798DF0-504A-40DA-A813-9456CEE920BC</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -36,7 +356,92 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>7B6319EA-7CCB-4F25-801E-D7F7334575CB</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>7BA6AA5B-4E5B-4D05-9BC6-9BD454563C67</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>7C26E362-DA29-4EFB-9ECD-B4593193D0F1</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>7E73E7F0-A789-4B1A-B610-AAC3CD3C9BE1</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>7EC8A356-1DF1-4090-8757-8641FFC6D5A3</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>816BF07B-1F90-49B4-A237-4A07AAD5E8B7</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>84AD7E31-8568-4F6C-B493-2A5D999CD2AF</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>873D53F3-C895-4BBF-80FC-9538BD8B2B19</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>8801C389-6FE6-4A11-9765-9008A9DCF3E8</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>88E7CDBE-AAA0-42DD-87C7-F96241F4C85B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>8A5DA0BD-2716-4DA5-82B4-A9C28DA330FC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>8C75BDFB-4DC5-46FA-9EC7-39D399809C9B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>8F05F2EF-4DB2-4E72-8AAA-1D2EAD3F5CF7</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>97A1E304-412B-42AF-A833-05B91D6AD58A</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>98A30640-0876-435D-B00C-82C70A18DF31</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9A69602A-4CF5-4AC8-9807-6C2D2C1AFB2D</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9AD7573B-C598-4BFC-AD73-33BA9C87D5C1</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9D08B982-6DBB-4401-B8A3-0C5893FCD86C</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -46,7 +451,97 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>9DD7BBD8-DE6B-48CA-983F-E398D6DE5E51</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9DE2ECC0-0FCE-44A5-B576-562C20E92919</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9ECBE7C7-E7A1-410F-B125-9AB01117568F</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>9F86D416-737B-4D26-BD55-F1BD6452518B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>A0401633-D8B7-4F1E-9BF6-98552D80F495</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>A04CE13F-DB53-4D92-B95D-B4FE39B80A61</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>A74F8980-D98B-4412-8F64-E434D757E033</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>A9428E5E-BB91-4AC1-AD17-B988D367C6D2</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>AA409BD6-AB01-4C8D-9369-16F040B9267B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>ACA635D1-3EB5-486A-BF19-F7A612FC5046</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>AD7AE4E7-7EF3-4330-94B0-79EDD1B7299E</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>AD926163-C27D-437D-B982-27E1577DEBE8</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>B1C3BE9F-061A-45B6-8B88-9333B14B9947</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>B2C0ABE6-8CB4-44FC-BF20-21D4C8CF4D13</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>B2E81281-B940-44B0-9744-568C7D29F399</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>B4A13216-FC71-4360-ADC9-530B5BC2D0D9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>C3B623CF-F7EE-461D-85FC-FA01F06918E9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>C82DE29B-A577-483A-BD40-91B6FFF6EBF7</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>C84D17EE-6524-4CED-AD46-0B95E1D9EA9D</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -56,7 +551,137 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>C90EAA8E-DFDC-4F78-8ED4-B58EC714BCF0</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>CAF4ECD6-CF34-45A2-8A65-51052A191A8A</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>CB01FC6C-5E9E-4617-8851-ED4D0CC7DA46</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>CB5E3EF6-6A26-4E1B-91E5-C3E0B3ADD5FB</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>D11F978C-A0C0-46C2-863E-BA2EF1B69DB5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>D1494C5B-799A-404B-B178-FFFFD5CAB0A6</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>D62E0C68-5D47-4AD5-8691-A5F34E9D7ED3</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>D8206957-0660-4EED-BAC0-94D113AEF7F0</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>D8C2C9F1-0FD8-40A3-A6A2-B6162F9C19F6</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>D918EECB-CA73-4F53-8B49-E26235599907</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>DD252424-0C26-4D7D-812C-34B18404A228</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>DE25D2E6-2927-4E21-9E80-C696D627DCE4</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>DFED9607-2CE2-4753-832C-0D2071D34531</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>E23D131B-5914-494E-9DAB-ED7AF3A24A54</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>E49D17C2-7192-4020-98E6-207D411D66AA</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>E51E0943-0688-4D3E-A439-C137125387AA</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>E830A9E7-75DC-4081-9097-5B6FB82F26DC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>E8982A7D-890C-4260-886F-6CC6C9C1AADE</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>EAE4EC35-7714-4850-9896-4819C2DB649B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>EB37E37C-AC0E-443D-965F-629987BA4278</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>EC4D6416-69CD-4A0C-9DD7-5F2CFBAC82A0</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>EFF07607-0AFB-42CA-952C-BF2AC6900522</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>F666DF33-0552-43D4-AAAA-F92E713EE3BC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>F70224D6-3EC1-4DBC-8C02-BB68D87801E9</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>FA9A9D13-DDC8-445B-9644-80DE3DBD6196</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>FB454A58-4A37-4762-8555-840A4168BC60</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>FF9A7349-E20A-462B-8618-E765E59CFF8C</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -76,7 +701,7 @@
 	</dict>
 	<key>inspectorSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {601, 640}}</string>
+		<string>{{0, 0}, {601, 1009}}</string>
 	</array>
 	<key>inspectorWidth</key>
 	<real>245</real>
@@ -85,6 +710,8 @@
 		<key>textScaleFactor</key>
 		<real>1</real>
 	</dict>
+	<key>mainDocumentEditor.scrollRect</key>
+	<string>{{-125, 0}, {870, 933}}</string>
 	<key>mainDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
@@ -97,6 +724,8 @@
 		<key>textScaleFactor</key>
 		<real>1</real>
 	</dict>
+	<key>supportingDocumentEditor.scrollRect</key>
+	<string>{{0, 0}, {606, 294}}</string>
 	<key>supportingDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
