add source colophon

--- a/ModernKebraNegast.scriv/Settings/ui.plist
+++ b/ModernKebraNegast.scriv/Settings/ui.plist
@@ -656,6 +656,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>EEEA5FBE-CD66-4191-B10F-2B9E7A3DA7A8</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>EFF07607-0AFB-42CA-952C-BF2AC6900522</key>
 		<dict>
 			<key>Row</key>
