Adding second introduction from source

--- a/ModernKebraNegast.scriv/Settings/ui.plist
+++ b/ModernKebraNegast.scriv/Settings/ui.plist
@@ -261,6 +261,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>51483619-1237-4861-B99E-F913E8F075E5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>536F384E-3EA4-4475-844F-23E724385FBE</key>
 		<dict>
 			<key>Row</key>
