--- a/ModernKebraNegast.scriv/Settings/ui.plist
+++ b/ModernKebraNegast.scriv/Settings/ui.plist
@@ -231,6 +231,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>42E6DCF1-858A-4BDB-A13D-D687B422C9D5</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>44614034-CEEC-465B-8B5C-5A207BFBA9BC</key>
 		<dict>
 			<key>Row</key>
@@ -417,6 +422,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>8A5DA0BD-2716-4DA5-82B4-A9C28DA330FC</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>8BCD3E68-6350-4565-B467-B43A29DA723B</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -701,6 +711,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>FE606A6C-5CBF-4B93-9B60-0D8930AD1A70</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>FF9A7349-E20A-462B-8618-E765E59CFF8C</key>
 		<dict>
 			<key>Row</key>
@@ -714,6 +729,10 @@
 		<key>SupportingID</key>
 		<string></string>
 	</dict>
+	<key>editorSplitFrames</key>
+	<array>
+		<string>{{430, 0}, {430, 1573}}</string>
+	</array>
 	<key>fullScreenTextEditorSettings</key>
 	<dict>
 		<key>textScaleFactor</key>
@@ -726,6 +745,8 @@
 	</array>
 	<key>inspectorWidth</key>
 	<real>245</real>
+	<key>lastDocumentSplitType</key>
+	<integer>1</integer>
 	<key>mainDocumentEditor.dockedQRTextSettings</key>
 	<dict>
 		<key>textScaleFactor</key>
