Name chapters for 1-23 and 111-117

--- a/ModernKebraNegast.scriv/Settings/ui.plist
+++ b/ModernKebraNegast.scriv/Settings/ui.plist
@@ -252,6 +252,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>43F2CA33-D3D9-459D-A053-76F7E7282D61</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>44614034-CEEC-465B-8B5C-5A207BFBA9BC</key>
 		<dict>
 			<key>Row</key>
@@ -328,6 +333,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>651F63C0-AA9F-4B66-BF85-9F60BC093BC4</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>6A037F1A-129D-4F56-B056-0658D46A8D7C</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
