--- a/ModernKebraNegast.scriv/Settings/ui.plist
+++ b/ModernKebraNegast.scriv/Settings/ui.plist
@@ -10,7 +10,7 @@
 		</array>
 	</dict>
 	<key>CompileFolder</key>
-	<string>/Users/mlaaker/Desktop/scrivpub</string>
+	<string>/Users/mlaaker/Library/CloudStorage/GoogleDrive-mlaaker@gmail.com/My Drive/Projects/Kəbrä Nägäśt/Builds/The Glory of the Kings of Ethiopia/book-glory-of-the-kings-of-ethiopia/book-glory-of-the-kings-of-ethiopia/Editions/Text-only/1922 Kebra Nagast.md</string>
 	<key>NotesScaleFactor</key>
 	<real>1</real>
 	<key>SuppressBookmarksFolderCheck</key>
@@ -183,6 +183,11 @@
 			<integer>-1</integer>
 		</dict>
 		<key>2D874845-5CD7-4A9B-879F-5886DECA610B</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
+		<key>2F6818B6-FAFB-4A66-98DB-878D499FCDEA</key>
 		<dict>
 			<key>Row</key>
 			<integer>-1</integer>
@@ -800,7 +805,7 @@
 		<string>{{1779, 0}, {335, 1955}}</string>
 	</array>
 	<key>inspectorWidth</key>
-	<real>245</real>
+	<real>335</real>
 	<key>lastDocumentSplitType</key>
 	<integer>1</integer>
 	<key>mainDocumentEditor.dockedQRTextSettings</key>
@@ -816,7 +821,7 @@
 		<real>3</real>
 	</dict>
 	<key>mainWindowFrame</key>
-	<string>1089 122 2380 2013 0 0 3840 2135 </string>
+	<string>1086 122 2380 2013 0 0 3840 2135 </string>
 	<key>searchResultsTable</key>
 	<dict>
 		<key>order</key>
