--- a/Kebra Negast 1922.scriv/Settings/ui.plist
+++ b/Kebra Negast 1922.scriv/Settings/ui.plist
@@ -187,8 +187,10 @@
 		</dict>
 		<key>210669CD-8207-49D2-96D9-D97B17725C72</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>23AC152F-1C90-499D-8EF1-B3947C3C0800</key>
 		<dict>
@@ -311,8 +313,10 @@
 		</dict>
 		<key>42E6DCF1-858A-4BDB-A13D-D687B422C9D5</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>43F2CA33-D3D9-459D-A053-76F7E7282D61</key>
 		<dict>
@@ -801,6 +805,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>EB37E37C-AC0E-443D-965F-629987BA4278</key>
 		<dict>
 			<key>Row</key>
@@ -865,6 +874,7 @@
 	</dict>
 	<key>editorSplitFrames</key>
 	<array>
+		<string>{{0, 0}, {765, 1827}}</string>
 		<string>{{766, 0}, {765, 1827}}</string>
 	</array>
 	<key>fullScreenTextEditorSettings</key>
@@ -894,7 +904,7 @@
 		<real>3</real>
 	</dict>
 	<key>mainWindowFrame</key>
-	<string>51 250 2260 1885 0 0 3840 2135 </string>
+	<string>409 250 2260 1885 0 0 3840 2135 </string>
 	<key>searchResultsTable</key>
 	<dict>
 		<key>order</key>
@@ -904,7 +914,7 @@
 		<key>widths</key>
 		<dict>
 			<key>TITLE</key>
-			<real>258</real>
+			<real>200</real>
 		</dict>
 	</dict>
 	<key>supportingDocumentEditor.dockedQRTextSettings</key>
