--- a/Kebra Negast 1922.scriv/Settings/ui.plist
+++ b/Kebra Negast 1922.scriv/Settings/ui.plist
@@ -824,8 +824,10 @@
 		</dict>
 		<key>EEEA5FBE-CD66-4191-B10F-2B9E7A3DA7A8</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>EFF07607-0AFB-42CA-952C-BF2AC6900522</key>
 		<dict>
@@ -924,7 +926,7 @@
 		<real>1</real>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {250, 590.33333333333326}}</string>
+	<string>{{0, 0}, {606, 294}}</string>
 	<key>supportingDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
