--- a/Kebra Negast 1922.scriv/Settings/ui.plist
+++ b/Kebra Negast 1922.scriv/Settings/ui.plist
@@ -68,6 +68,25 @@
 		<string>{{0, 0}, {334, 1857}}</string>
 		<string>{{335, 0}, {1925, 1857}}</string>
 	</array>
+	<key>bookmarksPreviewTextSettings</key>
+	<dict>
+		<key>hasMultiplePages</key>
+		<false/>
+		<key>isRulerVisible</key>
+		<false/>
+		<key>lineNumberingInterval</key>
+		<integer>1</integer>
+		<key>showsLineNumbers</key>
+		<false/>
+		<key>textFocusMode</key>
+		<integer>0</integer>
+		<key>textScaleFactor</key>
+		<real>1</real>
+		<key>usesFacingPages</key>
+		<false/>
+		<key>usesTypewriterScrolling</key>
+		<false/>
+	</dict>
 	<key>bookmarksSelectionInfo</key>
 	<dict>
 		<key>0200FC6D-8F3E-404A-979A-86C74CAD0569</key>
@@ -907,7 +926,7 @@
 		<real>3</real>
 	</dict>
 	<key>mainWindowFrame</key>
-	<string>409 250 2260 1885 0 0 3840 2135 </string>
+	<string>1176 58 2260 1885 0 0 3840 2135 </string>
 	<key>searchResultsTable</key>
 	<dict>
 		<key>order</key>
