--- a/Kebra Negast 1922.scriv/Settings/ui.plist
+++ b/Kebra Negast 1922.scriv/Settings/ui.plist
@@ -65,8 +65,8 @@
 	<false/>
 	<key>binderSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {334, 1857}}</string>
-		<string>{{335, 0}, {1925, 1857}}</string>
+		<string>{{0, 0}, {252.5, 1008}}</string>
+		<string>{{253.5, 0}, {1456.5, 1008}}</string>
 	</array>
 	<key>bookmarksPreviewTextSettings</key>
 	<dict>
@@ -906,8 +906,8 @@
 	</dict>
 	<key>inspectorSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {1531, 1827}}</string>
-		<string>{{1532, 0}, {393, 1827}}</string>
+		<string>{{0, 0}, {1062.5, 978}}</string>
+		<string>{{1063.5, 0}, {393, 978}}</string>
 	</array>
 	<key>inspectorWidth</key>
 	<real>335</real>
@@ -919,14 +919,14 @@
 		<real>1</real>
 	</dict>
 	<key>mainDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {505.33333333333331, 590.33333333333326}}</string>
+	<string>{{0, 5945.1666666666661}, {354, 307.33333333333394}}</string>
 	<key>mainDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
 		<real>3</real>
 	</dict>
 	<key>mainWindowFrame</key>
-	<string>1176 58 2260 1885 0 0 3840 2135 </string>
+	<string>482 -89 1710 1036 0 0 1710 1069 </string>
 	<key>searchResultsTable</key>
 	<dict>
 		<key>order</key>
@@ -945,7 +945,7 @@
 		<real>1</real>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {606, 294}}</string>
+	<string>{{-1, 0}, {621, 294}}</string>
 	<key>supportingDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
