--- a/Kebra Negast 1922.scriv/Settings/ui.plist
+++ b/Kebra Negast 1922.scriv/Settings/ui.plist
@@ -65,8 +65,8 @@
 	<false/>
 	<key>binderSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {253, 1618}}</string>
-		<string>{{254, 0}, {1456, 1618}}</string>
+		<string>{{0, 0}, {253, 1008}}</string>
+		<string>{{254, 0}, {1456, 1008}}</string>
 	</array>
 	<key>bookmarksPreviewTextSettings</key>
 	<dict>
@@ -91,8 +91,10 @@
 	<dict>
 		<key>0200FC6D-8F3E-404A-979A-86C74CAD0569</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>028DF88E-85B8-4DCD-8ACF-051D209F2A26</key>
 		<dict>
@@ -270,8 +272,10 @@
 		</dict>
 		<key>2FA11E4C-7FA3-4BD6-84C6-0EAAC8CA76E5</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>304C1D6D-1335-44AD-8457-3D1594AFBFD5</key>
 		<dict>
@@ -374,8 +378,10 @@
 		</dict>
 		<key>51483619-1237-4861-B99E-F913E8F075E5</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>536F384E-3EA4-4475-844F-23E724385FBE</key>
 		<dict>
@@ -399,8 +405,10 @@
 		</dict>
 		<key>5E8458F1-D48C-4395-957E-834F9C10E632</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>5FC7E462-D59F-4880-A8C0-D3C40272E95B</key>
 		<dict>
@@ -484,8 +492,10 @@
 		</dict>
 		<key>78E66A75-50C3-4433-B300-12FBBD573D34</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>7B6319EA-7CCB-4F25-801E-D7F7334575CB</key>
 		<dict>
@@ -549,8 +559,10 @@
 		</dict>
 		<key>8BCD3E68-6350-4565-B467-B43A29DA723B</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>8C75BDFB-4DC5-46FA-9EC7-39D399809C9B</key>
 		<dict>
@@ -587,6 +599,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>9C6457CE-6F32-4195-BCA7-D3381ADDDB72</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>9D08B982-6DBB-4401-B8A3-0C5893FCD86C</key>
 		<dict>
 			<key>Row</key>
@@ -619,8 +636,10 @@
 		</dict>
 		<key>A0401633-D8B7-4F1E-9BF6-98552D80F495</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>A04CE13F-DB53-4D92-B95D-B4FE39B80A61</key>
 		<dict>
@@ -875,8 +894,10 @@
 		</dict>
 		<key>FE606A6C-5CBF-4B93-9B60-0D8930AD1A70</key>
 		<dict>
+			<key>DocID</key>
+			<string>EAF25E5A-CFB3-4031-83D2-32B92EF64C8E</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>FF9A7349-E20A-462B-8618-E765E59CFF8C</key>
 		<dict>
@@ -906,8 +927,8 @@
 	</dict>
 	<key>inspectorSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {1063, 1588}}</string>
-		<string>{{1064, 0}, {392, 1588}}</string>
+		<string>{{0, 0}, {1063, 978}}</string>
+		<string>{{1064, 0}, {392, 978}}</string>
 	</array>
 	<key>inspectorWidth</key>
 	<real>335</real>
@@ -919,14 +940,14 @@
 		<real>1</real>
 	</dict>
 	<key>mainDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {354.33333333333331, 510.66666666666663}}</string>
+	<string>{{0, 7}, {354.33333333333331, 307.33333333333331}}</string>
 	<key>mainDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
 		<real>3</real>
 	</dict>
 	<key>mainWindowFrame</key>
-	<string>0 -577 1710 1646 0 0 1710 1069 </string>
+	<string>2028 729 1710 1036 0 0 3840 2135 </string>
 	<key>searchResultsTable</key>
 	<dict>
 		<key>order</key>
@@ -945,7 +966,7 @@
 		<real>1</real>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {606, 294}}</string>
+	<string>{{-1, 0}, {621, 294}}</string>
 	<key>supportingDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
