Added Table of Contents

--- a/Kebra Negast 202x.scriv/Settings/ui.plist
+++ b/Kebra Negast 202x.scriv/Settings/ui.plist
@@ -757,6 +757,11 @@
 			<key>Row</key>
 			<integer>-1</integer>
 		</dict>
+		<key>DD80762C-B83C-43D0-8B76-148ED94055BE</key>
+		<dict>
+			<key>Row</key>
+			<integer>-1</integer>
+		</dict>
 		<key>DE25D2E6-2927-4E21-9E80-C696D627DCE4</key>
 		<dict>
 			<key>Row</key>
