--- a/Kebra Negast 202x.scriv/Settings/ui.plist
+++ b/Kebra Negast 202x.scriv/Settings/ui.plist
@@ -232,8 +232,10 @@
 		</dict>
 		<key>2D874845-5CD7-4A9B-879F-5886DECA610B</key>
 		<dict>
+			<key>DocID</key>
+			<string>BBAAF758-D916-448D-AAAE-8CC3D1F75F7C</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>2F6818B6-FAFB-4A66-98DB-878D499FCDEA</key>
 		<dict>
@@ -741,8 +743,10 @@
 		</dict>
 		<key>D8206957-0660-4EED-BAC0-94D113AEF7F0</key>
 		<dict>
+			<key>DocID</key>
+			<string>BBAAF758-D916-448D-AAAE-8CC3D1F75F7C</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>D8C2C9F1-0FD8-40A3-A6A2-B6162F9C19F6</key>
 		<dict>
@@ -771,8 +775,10 @@
 		</dict>
 		<key>DFED9607-2CE2-4753-832C-0D2071D34531</key>
 		<dict>
+			<key>DocID</key>
+			<string>BBAAF758-D916-448D-AAAE-8CC3D1F75F7C</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>E23D131B-5914-494E-9DAB-ED7AF3A24A54</key>
 		<dict>
