Cleanup up to Ch. 110

--- a/Kebra Negast 202x.scriv/Settings/ui.plist
+++ b/Kebra Negast 202x.scriv/Settings/ui.plist
@@ -294,8 +294,10 @@
 		</dict>
 		<key>3DE2E8D9-52F8-4E1C-AF87-857E0294704F</key>
 		<dict>
+			<key>DocID</key>
+			<string>BBAAF758-D916-448D-AAAE-8CC3D1F75F7C</string>
 			<key>Row</key>
-			<integer>-1</integer>
+			<integer>0</integer>
 		</dict>
 		<key>3F756F41-FEF7-4696-B294-668B5E1DACE6</key>
 		<dict>
