Update to 202x preface

--- a/Kebra Negast 202x.scriv/Settings/ui.plist
+++ b/Kebra Negast 202x.scriv/Settings/ui.plist
@@ -10,7 +10,7 @@
 		</array>
 	</dict>
 	<key>CompileFolder</key>
-	<string>/Users/mlaaker/Desktop</string>
+	<string>/Users/mlaaker/Desktop/newestbuild</string>
 	<key>NotesScaleFactor</key>
 	<real>1</real>
 	<key>QRPanelSettings</key>
